Fixed bug with the alignment of the sections

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,7 +13,8 @@ html {
     }
 
     .panels {
-      min-height:100vh;
+      /*min-height:100vh;*/
+      height: 100vh;
       overflow: hidden;
       display: flex;
     }
@@ -29,7 +30,7 @@ html {
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
         font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-        flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+        flex 0.8s cubic-bezier(0.61,-0.19, 0.7,-0.11),
         background 0.2s;
       font-size: 20px;
       background-size:cover;
@@ -42,28 +43,48 @@ html {
       cursor: pointer;
     }
 
-    p {
-      background-color: rgba(0,0,0,0.3);
+    p, .profile {
+      background-color: rgba(0,0,0,0.8);
     }
 
     .panel1 { background-image:url('../img/Neighborhood Restaurant.png'); }
     .panel2 { background-image:url('../img/myreads.png'); }
-    .panel3 { background-color: beige; }
+    .panel3 { background-color: #999999; }
     .panel4 { background-image:url('../img/Classic Arcade Game.png'); }
     .panel5 { background-image:url('../img/Memory Game.png'); }
 
     .panel > * {
       margin:0;
       width: 100%;
-      transition:transform 0.5s;;
-      flex: 1 0 auto;
+      transition: transform 0.5s;;
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
+    .profile {
+      /*display: block;*/
+      padding: 5px;
+      height: 31%;
+/*      justify-content: center;
+      align-items: center;*/
+      /*flex: 1;*/
+    }
+
+    .profile > p {
+      margin: 0;
+    }
+
+    img {
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      margin: 0;
+    }
+
     .panel > *:first-child {
-      transform: translateY(-100%);
+      transform: translateY(-280%);
     }
 
     .panel.open-active > *:first-child {
@@ -71,7 +92,7 @@ html {
     }
 
     .panel > *:last-child {
-      transform: translateY(100%);
+      transform: translateY(280%);
     }
 
     .panel.open-active > *:last-child {
@@ -84,11 +105,15 @@ html {
       text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 2em;
     }
-    .panel p:nth-child(2) {
+/*    .panel p:nth-child(2) {
       font-size: 4em;
-    }
+    }*/
 
     .panel.open {
-      flex: 6;
-      font-size:40px;
+      flex: 5;
+    }
+
+    .profile > p {
+      font-size: 25px;
+      background-color: transparent;
     }
